Projet GL/Projet_GL/src/test/deca/context/invalid/increment5/void-identifier.deca
// Test rule 2.5 : void Identifier

// Historique : cree le 17/01/2023

class A{
    int a;

    // Must be refused
    void b;
}